Implement variant manager (#209)
Signed-off-by: Geoffroy Jamgotchian <geoffroy.jamgotchian@rte-france.com>